--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,7 +42,7 @@
   apt:
     name: "{{ packages }}"
     state: present
-    update_cache: yes
+#    update_cache: yes
   vars:
     packages:
     - unifi
