--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,7 +15,7 @@
   apt:
     name: "{{ packages }}"
     state: present
-    update_cache: yes
+#    update_cache: yes
   vars:
     packages:
     - ca-certificates
