--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,7 +42,9 @@
   apt:
     update_cache: yes
     upgrade: dist
-
+  notify:
+    - restart_unifi
+    
 - name: "Install packages"
   apt:
     name: "{{ packages }}"
