--- a/tasks/unifi-backup-config.yml
+++ b/tasks/unifi-backup-config.yml
@@ -12,12 +12,7 @@
 - hosts: localhost
   become: yes
 
-  vars:
-    server_cert_host : '{{ def_srv_le_cert_host }}'
-    server_cert_src  : '{{ def_srv_le_cert_src }}'
-    server_cert_dst  : '{{ def_srv_le_cert_dst }}
-
   tasks:
     - name: "Fetch autobackup config from the Unifi Network Controller"
-      command: "rsync ansible@{{ server_cert_host }}:{{ server_cert_src }} {{ server_cert_dst }} -vrL"
+      command: "rsync ansible@{{ unifi_host }}:{{ unifi_path }} {{ unifi_dest }} -vrL"
       become: yes
