--- a/tasks/unifi-backup-config.yml
+++ b/tasks/unifi-backup-config.yml
@@ -19,5 +19,8 @@
   become_user: "{{ def_ansible_user }}"
   become_method: sudo
         
-#- name: "Fetch autobackup config from the Unifi Network Controller"
-#  command: "rsync ansible@{{ unifi_host }}:{{ unifi_path }} {{ unifi_dest }} -vrL"
+- name: "Fetch autobackup config from the Unifi Network Controller"
+  local_action: command "rsync ansible@{{ unifi_host }}:{{ unifi_path }} {{ unifi_dest }} -vrL"
+  become: yes
+  become_user: "{{ def_ansible_user }}"
+  become_method: sudo
