--- a/tasks/unifi-backup-config.yml
+++ b/tasks/unifi-backup-config.yml
@@ -20,7 +20,7 @@
   become_method: sudo
         
 - name: "Fetch autobackup config from the Unifi Network Controller"
-  local_action: command "rsync ansible@{{ unifi_host }}:{{ unifi_path }} {{ unifi_dest }} -vrL"
+  local_action: command "rsync {{ def_ansible_user }}@{{ unifi_host }}:{{ unifi_path }} {{ unifi_dest }} -vrL"
   become: yes
   become_user: "{{ def_ansible_user }}"
   become_method: sudo
