--- a/tasks/unifi-backup-config.yml
+++ b/tasks/unifi-backup-config.yml
@@ -18,9 +18,21 @@
   become: yes
   become_user: "{{ def_ansible_user }}"
   become_method: sudo
-        
+  
+- name: "Change owner to {{ def_ansible_user }} on /var/lib/unifi/backup/ server: {{ ansible_hostname }}"
+  file:
+    path: /var/lib/unifi/backup/
+    owner: "{{ def_ansible_user }}"
+    recurse: yes
+      
 - name: "Fetch autobackup config from the Unifi Network Controller"
   local_action: command "rsync {{ def_ansible_user }}@{{ unifi_host }}:{{ unifi_path }} {{ unifi_dest }} -vrL"
   become: yes
   become_user: "{{ def_ansible_user }}"
   become_method: sudo
+
+- name: "Change owner to unifi on /var/lib/unifi/backup/ server: {{ ansible_hostname }}"
+  file:
+    path: /var/lib/unifi/backup/
+    owner: unifi
+    recurse: yes
