--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,6 +19,6 @@
 # Comment:
 #   Autobackup must be configured within the Gui.
 #
-unifi_host : '{{ ansible_hostname }}'
+unifi_host : '{{ ansible_host }}'
 unifi_path : '/var/lib/unifi/backup/'
 unifi_dest : '/opt/ansible-core/bitfinity-nl/files/private/backups/{{ ansible_hostname }}/unifi/'
