--- a/tasks/unifi-backup-config.yml
+++ b/tasks/unifi-backup-config.yml
@@ -28,6 +28,7 @@
       
 - name: "Fetch autobackup config from the Unifi Network Controller"
   local_action: command "rsync {{ def_ansible_user }}@{{ unifi_host }}:{{ unifi_path }} {{ unifi_dest }} -vrL"
+  become_user: "{{ def_ansible_user }}"
 
 - name: "Change owner to unifi on /var/lib/unifi/backup/ server: {{ ansible_hostname }}"
   file:
