--- a/tasks/unifi-backup-config.yml
+++ b/tasks/unifi-backup-config.yml
@@ -27,10 +27,10 @@
     recurse: yes
       
 - name: "Fetch autobackup config from the Unifi Network Controller"
-  local_action: command "rsync {{ def_ansible_user }}@{{ unifi_host }}:{{ unifi_path }} {{ unifi_dest }} -vrL"
+  local_action: raw "rsync {{ def_ansible_user }}@{{ unifi_host }}:{{ unifi_path }} {{ unifi_dest }} -vrL"
   become: yes
   become_user: "{{ def_ansible_user }}"
-  become_method: su
+  become_method: sudo
 
 - name: "Change owner to unifi on /var/lib/unifi/backup/ server: {{ ansible_hostname }}"
   file:
