--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,14 +4,14 @@
 # Author: Bitfinity-NL / L. Rutten
 # File: tasks/main.yml
 
-- name: "Backup configuration"
-  import_tasks: unifi-backup-config.yml
-  when:
-    - ansible_distribution_version == "20.04"
-    - ansible_architecture == "x86_64"
-    
-#- name: "For OS: Ubuntu 20.04LTS, Arch: amd64"
-#  import_tasks: ubt-2004-amd64.yml
+#- name: "Backup configuration"
+#  import_tasks: unifi-backup-config.yml
 #  when:
 #    - ansible_distribution_version == "20.04"
 #    - ansible_architecture == "x86_64"
+    
+- name: "For OS: Ubuntu 20.04LTS, Arch: amd64"
+  import_tasks: ubt-2004-amd64.yml
+  when:
+    - ansible_distribution_version == "20.04"
+    - ansible_architecture == "x86_64"
